use URIs instead og Strings for DomainController